# excel

./: .gitignore  README.md  config.example.yaml  config.yaml  convert.bat  convert.sh  launch.bat  launch.sh  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  使用手册.md  架构设计.md
src/excel_utils/: __init__.py  main.py  webui.py  xlsx2csv.py
src/excel_utils/config/: models.py  parser.py
src/excel_utils/engine/: executor.py  sql_generator.py
src/excel_utils/output/: writer.py
