[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-utils"
version = "0.1.0"
description = "Dynamic Excel/CSV matching pipeline powered by DuckDB"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
excel-utils = "excel_utils.main:main"

[tool.setuptools.packages.find]
where = ["src"]
